--- a/index.html
+++ b/index.html
@@ -17,20 +17,7 @@
 
     <section class="content">
         <h1>Pokedex</h1>
-        <ol class="pokemons">
-            <li class="pokemon">
-                <span class="number">#001</span>
-                <span class="name">Bulbasaur</span>
-                <div class="detail">
-                    <ol class="types">
-                        <li class="type">grass</li>
-                        <li class="type">poison</li>
-                    </ol>
-                    <img src="https://i.pinimg.com/originals/e2/44/3d/e2443d9017d005260988daaa839d768e.png"
-                        alt="Bulbasaur">
-                </div>
-            </li>
-        </ol>
+        <ol id="pokemonList" class="pokemons"></ol>
     </section>
 
     <script src="./assets/js/main.js"></script>
